{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 83,
  "lineage": "b399cba8-16e8-bf49-485c-86efabf37d8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bb8c4f4a19db07b",
            "arn": "arn:aws:ec2:us-east-1:635592634491:elastic-ip/eipalloc-07bb8c4f4a19db07b",
            "association_id": "eipassoc-0a3800f68f4aff553",
            "domain": "vpc",
            "id": "eipalloc-07bb8c4f4a19db07b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07c6b4d435fb9059b",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-3-212-8-113.compute-1.amazonaws.com",
            "public_ip": "3.212.8.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-nat-eip",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-nat-eip",
              "Project": "parcial-valero-rincon"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fd066b86800f60c",
            "arn": "arn:aws:ec2:us-east-1:635592634491:instance/i-0f1734d4d4cdb9153",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0f1734d4d4cdb9153",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf6a8f854c729e9a",
            "private_dns": "ip-10-0-1-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-44-201-148-200.compute-1.amazonaws.com",
            "public_ip": "44.201.148.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "parcial-valero-rincon"
                },
                "throughput": 125,
                "volume_id": "vol-0936431a7c90921fd",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0335de3da492fa4d4",
            "tags": {
              "Environment": "prod",
              "Instance": "instance-1",
              "Name": "parcial-valero-rincon-prod-ec2-1",
              "NodeIndex": "1",
              "Project": "parcial-valero-rincon",
              "Role": "app-server"
            },
            "tags_all": {
              "Environment": "prod",
              "Instance": "instance-1",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-ec2-1",
              "NodeIndex": "1",
              "Project": "parcial-valero-rincon",
              "Role": "app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0727bb064ed6c1d23"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fd066b86800f60c",
            "arn": "arn:aws:ec2:us-east-1:635592634491:instance/i-071df99560f2653fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-071df99560f2653fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09cdfa0406995d66c",
            "private_dns": "ip-10-0-2-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.101",
            "public_dns": "ec2-32-199-178-167.compute-1.amazonaws.com",
            "public_ip": "32.199.178.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "parcial-valero-rincon"
                },
                "throughput": 125,
                "volume_id": "vol-08c3e0a444c1ddd2e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b3181d7a564b1b6",
            "tags": {
              "Environment": "prod",
              "Instance": "instance-2",
              "Name": "parcial-valero-rincon-prod-ec2-2",
              "NodeIndex": "2",
              "Project": "parcial-valero-rincon",
              "Role": "app-server"
            },
            "tags_all": {
              "Environment": "prod",
              "Instance": "instance-2",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-ec2-2",
              "NodeIndex": "2",
              "Project": "parcial-valero-rincon",
              "Role": "app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0727bb064ed6c1d23"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:internet-gateway/igw-06333fb31dc2a552f",
            "id": "igw-06333fb31dc2a552f",
            "owner_id": "635592634491",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-igw",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-igw",
              "Project": "parcial-valero-rincon"
            },
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:635592634491:loadbalancer/app/parcial-valero-rincon-prod-alb/81d91f9fdd65036e",
            "arn_suffix": "app/parcial-valero-rincon-prod-alb/81d91f9fdd65036e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "parcial-valero-rincon-prod-alb-1147535689.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:635592634491:loadbalancer/app/parcial-valero-rincon-prod-alb/81d91f9fdd65036e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "parcial-valero-rincon-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02618eda704e92c20"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0335de3da492fa4d4"
              },
              {
                "subnet_id": "subnet-09b3181d7a564b1b6"
              }
            ],
            "subnets": [
              "subnet-0335de3da492fa4d4",
              "subnet-09b3181d7a564b1b6"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-alb",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-alb",
              "Project": "parcial-valero-rincon"
            },
            "vpc_id": "vpc-0d46327e12440110e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:635592634491:listener/app/parcial-valero-rincon-prod-alb/81d91f9fdd65036e/b0802c6f931579f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:635592634491:targetgroup/parcial-valero-rincon-prod-tg/6f69cc7ea4691ebe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:635592634491:listener/app/parcial-valero-rincon-prod-alb/81d91f9fdd65036e/b0802c6f931579f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:635592634491:loadbalancer/app/parcial-valero-rincon-prod-alb/81d91f9fdd65036e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-listener-http",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-listener-http",
              "Project": "parcial-valero-rincon"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:635592634491:targetgroup/parcial-valero-rincon-prod-tg/6f69cc7ea4691ebe",
            "arn_suffix": "targetgroup/parcial-valero-rincon-prod-tg/6f69cc7ea4691ebe",
            "deregistration_delay": "20",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:635592634491:targetgroup/parcial-valero-rincon-prod-tg/6f69cc7ea4691ebe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:635592634491:loadbalancer/app/parcial-valero-rincon-prod-alb/81d91f9fdd65036e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "parcial-valero-rincon-prod-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-tg",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-tg",
              "Project": "parcial-valero-rincon"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:635592634491:targetgroup/parcial-valero-rincon-prod-tg/6f69cc7ea4691ebe-20260525205338436800000003",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:635592634491:targetgroup/parcial-valero-rincon-prod-tg/6f69cc7ea4691ebe",
            "target_id": "i-0f1734d4d4cdb9153"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_instance.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:635592634491:targetgroup/parcial-valero-rincon-prod-tg/6f69cc7ea4691ebe-20260525205338455500000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:635592634491:targetgroup/parcial-valero-rincon-prod-tg/6f69cc7ea4691ebe",
            "target_id": "i-071df99560f2653fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_instance.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bb8c4f4a19db07b",
            "association_id": "eipassoc-0a3800f68f4aff553",
            "connectivity_type": "public",
            "id": "nat-06e55c535aa60dec6",
            "network_interface_id": "eni-07c6b4d435fb9059b",
            "private_ip": "10.0.1.6",
            "public_ip": "3.212.8.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0335de3da492fa4d4",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-nat",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-nat",
              "Project": "parcial-valero-rincon"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:route-table/rtb-08d0b0490b10b5dd7",
            "id": "rtb-08d0b0490b10b5dd7",
            "owner_id": "635592634491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e55c535aa60dec6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-private-rt",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-private-rt",
              "Project": "parcial-valero-rincon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:route-table/rtb-057bdf21bc3ca85bd",
            "id": "rtb-057bdf21bc3ca85bd",
            "owner_id": "635592634491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06333fb31dc2a552f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-public-rt",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-public-rt",
              "Project": "parcial-valero-rincon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3b4bae24145725e",
            "route_table_id": "rtb-08d0b0490b10b5dd7",
            "subnet_id": "subnet-01055101c45c58dc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03daf78ba0d35beee",
            "route_table_id": "rtb-08d0b0490b10b5dd7",
            "subnet_id": "subnet-0f8f56b9bc7655a95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0518b691b4cb39d51",
            "route_table_id": "rtb-057bdf21bc3ca85bd",
            "subnet_id": "subnet-0335de3da492fa4d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b507a5b5d877697",
            "route_table_id": "rtb-057bdf21bc3ca85bd",
            "subnet_id": "subnet-09b3181d7a564b1b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:security-group/sg-02618eda704e92c20",
            "description": "Permite HTTP/HTTPS desde internet hacia el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02618eda704e92c20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS desde internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "parcial-valero-rincon-prod-sg-alb",
            "name_prefix": "",
            "owner_id": "635592634491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-sg-alb",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-sg-alb",
              "Project": "parcial-valero-rincon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:security-group/sg-0727bb064ed6c1d23",
            "description": "Permite trafico de la app solo desde el ALB y SSH desde IP autorizada",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0727bb064ed6c1d23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH para administracion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App Node.js solo desde el ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02618eda704e92c20"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "parcial-valero-rincon-prod-sg-ec2",
            "name_prefix": "",
            "owner_id": "635592634491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-sg-ec2",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-sg-ec2",
              "Project": "parcial-valero-rincon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:security-group/sg-0a72d37c4dc765fc4",
            "description": "Permite MySQL solo desde las EC2 de la aplicacion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a72d37c4dc765fc4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL solo desde EC2 de la app",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0727bb064ed6c1d23"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "parcial-valero-rincon-prod-sg-rds",
            "name_prefix": "",
            "owner_id": "635592634491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-sg-rds",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-sg-rds",
              "Project": "parcial-valero-rincon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:subnet/subnet-01055101c45c58dc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01055101c45c58dc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635592634491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-private-1",
              "Project": "parcial-valero-rincon",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-private-1",
              "Project": "parcial-valero-rincon",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:subnet/subnet-0f8f56b9bc7655a95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8f56b9bc7655a95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635592634491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-private-2",
              "Project": "parcial-valero-rincon",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-private-2",
              "Project": "parcial-valero-rincon",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:subnet/subnet-0335de3da492fa4d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0335de3da492fa4d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635592634491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-public-1",
              "Project": "parcial-valero-rincon",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-public-1",
              "Project": "parcial-valero-rincon",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:subnet/subnet-09b3181d7a564b1b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b3181d7a564b1b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635592634491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-public-2",
              "Project": "parcial-valero-rincon",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-public-2",
              "Project": "parcial-valero-rincon",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d46327e12440110e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635592634491:vpc/vpc-0d46327e12440110e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05785249035866b92",
            "default_route_table_id": "rtb-05085818980c1ca3f",
            "default_security_group_id": "sg-0da803f1841c402a0",
            "dhcp_options_id": "dopt-08f06dc51fb2bc9f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d46327e12440110e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05085818980c1ca3f",
            "owner_id": "635592634491",
            "tags": {
              "Environment": "prod",
              "Name": "parcial-valero-rincon-prod-vpc",
              "Project": "parcial-valero-rincon"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "parcial-valero-rincon-prod-vpc",
              "Project": "parcial-valero-rincon"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}